[gd_scene load_steps=2 format=3 uid="uid://53jtkpt1iou2"]

[ext_resource type="Script" path="res://Question.gd" id="1_n47aa"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n47aa")

[node name="OptionA" type="Button" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 402.0
offset_right = 288.0
offset_bottom = 644.0
text = "Option A"

[node name="TextureRect" type="TextureRect" parent="OptionA"]
layout_mode = 0
offset_right = 272.0
offset_bottom = 247.0

[node name="OptionB" type="Button" parent="."]
layout_mode = 0
offset_left = 364.0
offset_top = 406.0
offset_right = 631.0
offset_bottom = 658.0
text = "Option B"

[node name="TextureRect" type="TextureRect" parent="OptionB"]
layout_mode = 0
offset_right = 258.0
offset_bottom = 244.0

[node name="OptionC" type="Button" parent="."]
layout_mode = 0
offset_left = 715.0
offset_top = 400.0
offset_right = 983.0
offset_bottom = 648.0
text = "Option C"

[node name="TextureRect" type="TextureRect" parent="OptionC"]
layout_mode = 0
offset_right = 258.0
offset_bottom = 246.0

[node name="Easy B" type="Button" parent="."]
offset_left = 213.0
offset_top = 219.0
offset_right = 350.0
offset_bottom = 344.0

[node name="TextureRect" type="TextureRect" parent="Easy B"]
layout_mode = 1
anchors_preset = -1
offset_left = 1.0
offset_top = 1.0
offset_right = 41.0
offset_bottom = 41.0
